signup.yml
apiVersion: v1
kind: Pod
metadata:
  name: pod-signup
  namespace: ingress-nginx
  labels:
    category: signup
spec:
  containers:
  - name: container
    image: signup:1.0
---
apiVersion: v1
kind: Service
metadata:
  name: svc-signup
  namespace: ingress-nginx
spec:
  selector:
    category: signup
  ports:
  - port: 8080
