ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: service-loadbalancing
  namespace: ingress-nginx
spec:
  ingressClassName: nginx
  rules:
  - host: www.test.com
    http:
      paths:
        - path: /mainpage
          pathType: Prefix
          backend:
            service:
              name: svc-mainpage
              port:
                number: 80
        - path: /signup
          pathType: Prefix
          backend:
            service:
              name: svc-signup
              port:
                number: 80
        - path: /board
          pathType: Prefix
          backend:
            service:
              name: svc-board
              port:
                number: 80
