ingress2.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: service-loadbalancing
  namespace: ingress-nginx
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
spec:
# ingressClassName: nginx
  rules:
  - host: www.homepage.com
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: svc-mainpage
              port:
                number: 80
   - host: www.homepage.com
     http:
       paths:
        - pathType: Prefix
          path: "/signup"
          backend:
            service:
              name: svc-signup
              port:
                number: 80
    - host: www.homepage.com  
      http:
       paths:
        - pathType: Prefix
          path: "/board"
          backend:
            service:
              name: svc-board
              port:
                number: 80
